# cs537-OS

./: README.md
Project 1 - Fortune Teller/: CMakeLists.txt  badger-fortune  badger-fortune.c  output.txt  test.c
Project 3 - SMASH/: CMakeLists.txt  ForkTest.c  in  main  main.c  output.txt  test.txt
Project 4/xv6/include/: param.h  pstat.h  syscall.h
Project 4/xv6/kernel/: defs.h  proc.c  proc.h  sysproc.c
Project 5 - COW Fork/xv6_p5_scratch/include/: syscall.h
Project 5 - COW Fork/xv6_p5_scratch/kernel/: defs.h  kalloc.c  sysproc.c  trap.c  vm.c
Project 6/: CMakeLists.txt  psort.c  test.c
Project 7 - Drive Recovery/: CMakeLists.txt  README  rcheck.py
Project 7 - Drive Recovery/starter_code/: Makefile  read_ext2.c  runscan  runscan.c  runscantest.c  runscantest2.c  runscantest3.c
Project 7 - Drive Recovery/starter_code/runscan.dSYM/Contents/Resources/DWARF/: runscan
Project 8/starter_code/: Makefile  app1.c  client  client.c  client2.c  client_backup.c  server.c  server2.c  server3.c  server_backup.c
